--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -97,7 +97,6 @@ p {
   line-height: 1.5;
   margin: 2rem 0;
   padding: 0 2rem;
-  text-align: justify;
 }
 
 
